--- a/app/web/templates/base.html
+++ b/app/web/templates/base.html
@@ -12,7 +12,8 @@
         <div class="container-fluid">
             <div class="d-flex align-items-center">
                 <a class="navbar-brand me-3" href="/">BirdFeeder</a>
-                <a class="btn btn-outline-light btn-sm" href="/live">Live</a>
+                <a class="btn btn-outline-light btn-sm me-2" href="/live">Live</a>
+                <a class="btn btn-outline-light btn-sm" href="/logs">Logs</a>
             </div>
             <div class="d-flex align-items-center gap-3">
                 <span class="text-light small">
